# sweep

./: .pre-commit-config.yaml  Dockerfile  Dockerfile_linux  Makefile  pyproject.toml  requirements.arm64.txt
docs/: 01-architecture.md
sweep_chat/: .env
sweep_chat/components/: App.tsx
sweep_chat/lib/: authOptions.ts  constants.ts  posthog.ts
sweepai/agents/: analyze_snippets.py  image_description_bot.py  modify_utils.py  pr_description_bot.py  question_answerer.py
sweepai/chat/: api.py
sweepai/core/: annotate_code_openai.py  chat.py  context_pruning.py  lexical_search.py  pull_request_bot.py  reflection_utils.py  review_annotations.py  review_utils.py  sweep_bot.py  vector_db.py
sweepai/utils/: anthropic_client.py  code_validators.py  issue_validator.py  openai_proxy.py  previous_diff_utils.py  tree_sitter_shim.py
tests/search/: test_lexical_search.py
